# orch-or

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_v0.1.md  pyproject.toml  release_assets_v0.1.txt
docs/: discriminating_tests.md  equations.md  haos_iip_bridge_contract.md  literature_queue.md  or_necessity.md  orch_or_audit_contract.md  paper_matrix.md  published_values.md  publishing.md  roadmap.md  source_register.md
examples/: expected_anesthesia_prediction_table.csv  expected_collapse_time_table.csv  expected_decoherence_estimate_table.csv  expected_dp_threshold_table.csv  expected_hameroff_benchmark.csv  expected_haos_or_summary.json  expected_microtubule_geometry_sweep.csv  expected_or_decoherence_comparison.csv  expected_orch_or_summary.json  expected_protofilament_lattice_sweep.csv  expected_reduction_distinction.csv  expected_reduction_events.csv  expected_reduction_sweep.csv  expected_temperature_decoherence_sweep.csv  expected_time_crystal_multiscale.csv  expected_timing_statistics_table.csv  expected_trp_superradiance_table.csv  hameroff_benchmark.py  microtubule_geometry_sweep.py  or_off_comparison.py  protofilament_lattice_sweep.py  quick_reproduce.py  reduction_distinction.py  reduction_events.py  reduction_sweep.py  time_crystals_multiscale.py  trp_superradiance.py
images/: README.md
notebooks/: 01_dp_thresholds.ipynb  02_decoherence_anesthesia.ipynb  03_microtubule_geometry.ipynb  04_full_audit_dashboard.ipynb  04_time_crystals_multiscale.ipynb  05_trp_superradiance.ipynb  README.md  (+1 more)
(+50 files in other folders)
