[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orch-or"
version = "0.1.0"
description = "Orch-OR diagnostic bridge for bounded timing, decoherence, and perturbation audits."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
orch-or = "orch_or.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
